LPD-49265 Move all the logic related to Sidecar configuration building to a new class, prepare for next