@@ -8,7 +8,6 @@ package com.liferay.portal.search.elasticsearch7.internal.sidecar;
 import com.liferay.petra.concurrent.FutureListener;
 import com.liferay.petra.concurrent.NoticeableFuture;
 import com.liferay.petra.process.ProcessChannel;
-import com.liferay.petra.process.ProcessConfig;
 import com.liferay.petra.process.ProcessException;
 import com.liferay.petra.process.ProcessExecutor;
 import com.liferay.petra.process.ProcessLog;
@@ -16,61 +15,55 @@ import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
-import com.liferay.portal.kernel.util.HashMapBuilder;
-import com.liferay.portal.kernel.util.JavaDetector;
-import com.liferay.portal.kernel.util.ListUtil;
-import com.liferay.portal.kernel.util.OSDetector;
-import com.liferay.portal.kernel.util.PropsKeys;
-import com.liferay.portal.kernel.util.StringUtil;
-import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.search.elasticsearch7.internal.configuration.ElasticsearchConfigurationWrapper;
 import com.liferay.portal.search.elasticsearch7.internal.sidecar.constants.SidecarConstants;
 import com.liferay.portal.search.elasticsearch7.internal.util.ResourceUtil;
-import com.liferay.portal.util.PropsUtil;
-import com.liferay.portal.util.PropsValues;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.Serializable;
 
-import java.net.URL;
-
-import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import java.security.CodeSource;
-import java.security.ProtectionDomain;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-
-import org.elasticsearch.common.settings.Settings;
 
 /**
  * @author Tina Tian
  */
 public class Sidecar {
 
-	public Sidecar(
-		ElasticsearchConfigurationWrapper elasticsearchConfigurationWrapper,
-		ElasticsearchInstancePaths elasticsearchInstancePaths,
-		ProcessExecutor processExecutor,
-		FutureListener<Serializable> restartFutureListener) {
+	public static void consumeProcessLog(ProcessLog processLog) {
+		if (ProcessLog.Level.DEBUG == processLog.getLevel()) {
+			if (_log.isDebugEnabled()) {
+				_log.debug(processLog.getMessage(), processLog.getThrowable());
+			}
+		}
+		else if (ProcessLog.Level.INFO == processLog.getLevel()) {
+			if (_log.isInfoEnabled()) {
+				_log.info(processLog.getMessage(), processLog.getThrowable());
+			}
+		}
+		else if (ProcessLog.Level.WARN == processLog.getLevel()) {
+			if (_log.isWarnEnabled()) {
+				_log.warn(processLog.getMessage(), processLog.getThrowable());
+			}
+		}
+		else {
+			_log.error(processLog.getMessage(), processLog.getThrowable());
+		}
+	}
 
-		_elasticsearchConfigurationWrapper = elasticsearchConfigurationWrapper;
-		_elasticsearchInstancePaths = elasticsearchInstancePaths;
+	public Sidecar(
+		ProcessExecutor processExecutor,
+		FutureListener<Serializable> restartFutureListener,
+		SidecarRuntimeConfiguration sidecarRuntimeConfiguration) {
+
 		_processExecutor = processExecutor;
 		_restartFutureListener = restartFutureListener;
+		_sidecarRuntimeConfiguration = sidecarRuntimeConfiguration;
 
-		_sidecarHomePath = elasticsearchInstancePaths.getHomePath();
+		_sidecarHomePath = sidecarRuntimeConfiguration.getSidecarHomePath();
 	}
 
 	public String getNetworkHostAddress() {
@@ -98,7 +91,8 @@ public class Sidecar {
 			_log.info(
 				StringBundler.concat(
 					"Sidecar Elasticsearch ", sidecarVersion, StringPool.SPACE,
-					_getNodeName(), " started at ", address));
+					_sidecarRuntimeConfiguration.getNodeName(), " started at ",
+					address));
 		}
 
 		_address = address;
@@ -120,7 +114,7 @@ public class Sidecar {
 
 			try {
 				noticeableFuture.get(
-					_elasticsearchConfigurationWrapper.sidecarShutdownTimeout(),
+					_sidecarRuntimeConfiguration.getSidecarShutdownTimeout(),
 					TimeUnit.MILLISECONDS);
 			}
 			catch (Exception exception) {
@@ -130,8 +124,8 @@ public class Sidecar {
 							StringBundler.concat(
 								"Forcibly shutdown sidecar Elasticsearch ",
 								"process because it did not shut down in ",
-								_elasticsearchConfigurationWrapper.
-									sidecarShutdownTimeout(),
+								_sidecarRuntimeConfiguration.
+									getSidecarShutdownTimeout(),
 								" ms"),
 							exception);
 					}
@@ -143,7 +137,8 @@ public class Sidecar {
 			_processChannel = null;
 		}
 
-		PathUtil.deleteDir(_sidecarTempDirPath);
+		PathUtil.deleteDir(
+			_sidecarRuntimeConfiguration.getSidecarTempDirPath());
 	}
 
 	private void _addFutureListener(
@@ -156,94 +151,6 @@ public class Sidecar {
 		noticeableFuture.addFutureListener(futureListener);
 	}
 
-	private void _consumeProcessLog(ProcessLog processLog) {
-		if (ProcessLog.Level.DEBUG == processLog.getLevel()) {
-			if (_log.isDebugEnabled()) {
-				_log.debug(processLog.getMessage(), processLog.getThrowable());
-			}
-		}
-		else if (ProcessLog.Level.INFO == processLog.getLevel()) {
-			if (_log.isInfoEnabled()) {
-				_log.info(processLog.getMessage(), processLog.getThrowable());
-			}
-		}
-		else if (ProcessLog.Level.WARN == processLog.getLevel()) {
-			if (_log.isWarnEnabled()) {
-				_log.warn(processLog.getMessage(), processLog.getThrowable());
-			}
-		}
-		else {
-			_log.error(processLog.getMessage(), processLog.getThrowable());
-		}
-	}
-
-	private String _createClasspath(
-		Path dirPath, DirectoryStream.Filter<Path> filter) {
-
-		try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(
-				dirPath, filter)) {
-
-			StringBundler sb = new StringBundler();
-
-			directoryStream.forEach(
-				path -> {
-					sb.append(path);
-					sb.append(File.pathSeparator);
-				});
-
-			if (sb.index() > 0) {
-				sb.setIndex(sb.index() - 1);
-			}
-
-			return sb.toString();
-		}
-		catch (IOException ioException) {
-			throw new RuntimeException(
-				"Unable to iterate " + dirPath, ioException);
-		}
-	}
-
-	private ProcessConfig _createProcessConfig() {
-		ProcessConfig.Builder builder = new ProcessConfig.Builder();
-
-		ProtectionDomain protectionDomain = Sidecar.class.getProtectionDomain();
-
-		CodeSource codeSource = protectionDomain.getCodeSource();
-
-		URL bundleURL = codeSource.getLocation();
-
-		String bootstrapClassPath = _createClasspath(
-			Paths.get(PropsValues.LIFERAY_SHIELDED_CONTAINER_LIB_PORTAL_DIR),
-			path -> {
-				String name = String.valueOf(path.getFileName());
-
-				return name.contains("petra");
-			});
-
-		return builder.setArguments(
-			_getJVMArguments()
-		).setBootstrapClassPath(
-			bootstrapClassPath
-		).setEnvironment(
-			HashMapBuilder.putAll(
-				System.getenv()
-			).put(
-				"HOSTNAME", "localhost"
-			).put(
-				"LIBFFI_TMPDIR", _sidecarHomePath.toString()
-			).build()
-		).setJavaExecutable(
-			System.getProperty("java.home") + "/bin/java"
-		).setProcessLogConsumer(
-			this::_consumeProcessLog
-		).setReactClassLoader(
-			Sidecar.class.getClassLoader()
-		).setRuntimeClassPath(
-			StringBundler.concat(
-				bundleURL.getPath(), File.pathSeparator, bootstrapClassPath)
-		).build();
-	}
-
 	private ProcessChannel<Serializable> _executeSidecarMainProcess() {
 		if (!Files.isDirectory(_sidecarHomePath)) {
 			throw new IllegalArgumentException(
@@ -253,10 +160,10 @@ public class Sidecar {
 
 		try {
 			return _processExecutor.execute(
-				_createProcessConfig(),
+				_sidecarRuntimeConfiguration.getProcessConfig(),
 				new SidecarMainProcessCallable(
-					_elasticsearchConfigurationWrapper.
-						sidecarHeartbeatInterval()));
+					_sidecarRuntimeConfiguration.
+						getSidecarHeartbeatInterval()));
 		}
 		catch (ProcessException processException) {
 			throw new RuntimeException(
@@ -274,181 +181,10 @@ public class Sidecar {
 			"Unsupported Elasticsearch version: " + sidecarVersion);
 	}
 
-	private List<String> _getJVMArguments() {
-		List<String> arguments = new ArrayList<>();
-
-		for (String jvmOption :
-				_elasticsearchConfigurationWrapper.sidecarJVMOptions()) {
-
-			if (jvmOption.contains("|")) {
-				if (_log.isWarnEnabled()) {
-					_log.warn(
-						jvmOption + " is not a valid format for the JVM " +
-							"options and will be ignored");
-				}
-			}
-			else {
-				arguments.add(jvmOption);
-			}
-		}
-
-		if (_elasticsearchConfigurationWrapper.sidecarDebug()) {
-			arguments.add(
-				_elasticsearchConfigurationWrapper.sidecarDebugSettings());
-		}
-
-		try {
-			_sidecarTempDirPath = Files.createTempDirectory("sidecar");
-		}
-		catch (IOException ioException) {
-			throw new IllegalStateException(
-				"Unable to create temp folder", ioException);
-		}
-
-		Path configFolder = _sidecarTempDirPath.resolve("config");
-
-		try {
-			Files.createDirectories(configFolder);
-
-			Files.write(
-				configFolder.resolve("log4j2.properties"),
-				Arrays.asList(
-					"logger.bootstrapchecks.name=org.elasticsearch.bootstrap." +
-						"BootstrapChecks",
-					"logger.bootstrapchecks.level=error",
-					"logger.deprecation.name=org.elasticsearch.deprecation",
-					"logger.deprecation.level=error", StringPool.BLANK,
-					ResourceUtil.getResourceAsString(
-						Sidecar.class, "/log4j2-sidecar.properties")));
-		}
-		catch (IOException ioException) {
-			_log.error(
-				"Unable to copy log4j2.properties to " + configFolder,
-				ioException);
-		}
-
-		arguments.add(
-			"--enable-native-access=org.elasticsearch.nativeaccess," +
-				"org.apache.lucene.core");
-		arguments.add("--enable-native-access=ALL-UNNAMED");
-		arguments.add("-Des.distribution.type=tar");
-		arguments.add("-Des.networkaddress.cache.negative.ttl=10");
-		arguments.add("-Des.networkaddress.cache.ttl=60");
-		arguments.add("-Des.path.conf=" + configFolder);
-		arguments.add("-Dfile.encoding=UTF-8");
-		arguments.add("-Dio.netty.noKeySetOptimization=true");
-		arguments.add("-Dio.netty.noUnsafe=true");
-		arguments.add("-Dio.netty.recycler.maxCapacityPerThread=0");
-		arguments.add("-Djava.awt.headless=true");
-		arguments.add("-Djava.io.tmpdir=" + _sidecarTempDirPath);
-		arguments.add("-Djna.nosys=true");
-		arguments.add("-Dlog4j.shutdownHookEnabled=false");
-		arguments.add("-Dlog4j2.disable.jmx=true");
-		arguments.add("-Dlog4j2.formatMsgNoLookups=true");
-		arguments.add(
-			"-Dorg.apache.lucene.vectorization.upperJavaFeatureVersion=21");
-
-		if (JavaDetector.isJDK21() && OSDetector.isLinux()) {
-			arguments.add("-XX:-UseContainerSupport");
-		}
-
-		// Modules
-
-		arguments.add("--add-modules=jdk.incubator.vector");
-		arguments.add("--add-modules=jdk.management.agent");
-		arguments.add("--add-modules=jdk.net");
-		arguments.add("--add-modules=ALL-MODULE-PATH");
-		arguments.add(
-			"--add-opens=org.elasticsearch.server/org.elasticsearch." +
-				"bootstrap=ALL-UNNAMED");
-		arguments.add("--module-path=" + _sidecarHomePath.resolve("lib"));
-		arguments.add("-Djdk.module.main=org.elasticsearch.server");
-
-		// Apply agent to load modified classes
-
-		Path path = Path.of(
-			PropsUtil.get(PropsKeys.LIFERAY_HOME), "elasticsearch-sidecar",
-			"com.liferay.portal.search.elasticsearch7.sidecar.agent.jar");
-
-		arguments.add("-javaagent:" + path.toAbsolutePath());
-
-		return arguments;
-	}
-
-	private String _getNodeName() {
-		String nodeName = _elasticsearchConfigurationWrapper.nodeName();
-
-		if (!Validator.isBlank(nodeName)) {
-			return nodeName;
-		}
-
-		return "liferay_sidecar";
-	}
-
-	private Settings _getSettings() {
-		return ElasticsearchInstanceSettingsBuilder.builder(
-		).clusterName(
-			_elasticsearchConfigurationWrapper.clusterName()
-		).discoveryTypeSingleNode(
-			true
-		).elasticsearchConfigurationWrapper(
-			_elasticsearchConfigurationWrapper
-		).elasticsearchInstancePaths(
-			_elasticsearchInstancePaths
-		).httpPortRange(
-			new HttpPortRange(_elasticsearchConfigurationWrapper)
-		).nodeName(
-			_getNodeName()
-		).build();
-	}
-
-	private SidecarServerArgs _getSidecarServerArgs() {
-		Settings settings = _getSettings();
-
-		StringBundler sb = new StringBundler((2 * settings.size()) + 1);
-
-		sb.append("Sidecar Elasticsearch properties : {");
-
-		Map<String, Serializable> settingsMap = new HashMap<>();
-
-		for (String key : settings.keySet()) {
-			List<String> list = settings.getAsList(key);
-
-			if (ListUtil.isEmpty(list)) {
-				continue;
-			}
-
-			String keyValue = StringBundler.concat(
-				key, StringPool.EQUAL, StringUtil.merge(list));
-
-			sb.append(keyValue);
-
-			sb.append(StringPool.COMMA);
-
-			if (list.size() == 1) {
-				settingsMap.put(key, list.get(0));
-			}
-			else {
-				settingsMap.put(key, new ArrayList<>(list));
-			}
-		}
-
-		sb.setStringAt(StringPool.CLOSE_CURLY_BRACE, sb.index() - 1);
-
-		if (_log.isDebugEnabled()) {
-			_log.debug(sb.toString());
-		}
-
-		return new SidecarServerArgs(
-			String.valueOf(_sidecarTempDirPath.resolve("config")), false,
-			String.valueOf(_sidecarHomePath.resolve("logs")), null, false,
-			settingsMap);
-	}
-
 	private void _installElasticsearchIfNeeded(String sidecarVersion) {
 		ElasticsearchInstaller.builder(
 		).distributablesDirectoryPath(
-			_elasticsearchInstancePaths.getWorkPath()
+			_sidecarRuntimeConfiguration.getSidecarWorkPath()
 		).distribution(
 			_getElasticsearchDistribution(sidecarVersion)
 		).installationDirectoryPath(
@@ -461,7 +197,8 @@ public class Sidecar {
 		ProcessChannel<Serializable> processChannel) {
 
 		NoticeableFuture<String> noticeableFuture = processChannel.write(
-			new StartSidecarProcessCallable(_getSidecarServerArgs()));
+			new StartSidecarProcessCallable(
+				_sidecarRuntimeConfiguration.getSidecarServerArgs()));
 
 		try {
 			return _waitForPublishedAddress(noticeableFuture);
@@ -510,13 +247,10 @@ public class Sidecar {
 	private static final Log _log = LogFactoryUtil.getLog(Sidecar.class);
 
 	private String _address;
-	private final ElasticsearchConfigurationWrapper
-		_elasticsearchConfigurationWrapper;
-	private final ElasticsearchInstancePaths _elasticsearchInstancePaths;
 	private ProcessChannel<Serializable> _processChannel;
 	private final ProcessExecutor _processExecutor;
 	private final FutureListener<Serializable> _restartFutureListener;
 	private final Path _sidecarHomePath;
-	private Path _sidecarTempDirPath;
+	private final SidecarRuntimeConfiguration _sidecarRuntimeConfiguration;
 
 }
